[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/battle/actordetails/ActorDetailsPanel.gd" type="Script" id=1]
[ext_resource path="res://src/ui/battle/actordetails/ActorPortrait.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/graphics/ui/icons/stats/hp.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/ui/icons/stats/ap.png" type="Texture" id=4]
[ext_resource path="res://src/ui/battle/actordetails/ActorStatDetails.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/graphics/ui/icons/stats/evasion.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/ui/icons/stats/resist.png" type="Texture" id=7]

[node name="ActorDetailsPanel" type="PopupPanel"]
visible = true
margin_right = 105.0
margin_bottom = 74.0
script = ExtResource( 1 )

[node name="Main" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0

[node name="Header" type="HBoxContainer" parent="Main"]
margin_right = 101.0
margin_bottom = 14.0

[node name="ActorPortrait" parent="Main/Header" instance=ExtResource( 2 )]

[node name="HeaderInfoMargin" type="MarginContainer" parent="Main/Header"]
margin_left = 15.0
margin_right = 87.0
margin_bottom = 14.0
custom_constants/margin_top = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Header/HeaderInfoMargin"]
margin_top = 1.0
margin_right = 72.0
margin_bottom = 14.0
custom_constants/separation = 1

[node name="Name" type="Label" parent="Main/Header/HeaderInfoMargin/VBoxContainer"]
margin_right = 72.0
margin_bottom = 6.0
text = "Senan Lv.12"
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Header/HeaderInfoMargin/VBoxContainer"]
margin_top = 7.0
margin_right = 72.0
margin_bottom = 12.0
custom_constants/separation = 4

[node name="HP" type="HBoxContainer" parent="Main/Header/HeaderInfoMargin/VBoxContainer/HBoxContainer"]
margin_right = 34.0
margin_bottom = 5.0
custom_constants/separation = 1

[node name="HPBar" type="TextureProgress" parent="Main/Header/HeaderInfoMargin/VBoxContainer/HBoxContainer/HP"]
margin_right = 5.0
margin_bottom = 5.0
max_value = 5.0
value = 3.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0.333333 )

[node name="HP" type="RichTextLabel" parent="Main/Header/HeaderInfoMargin/VBoxContainer/HBoxContainer/HP"]
margin_left = 6.0
margin_right = 34.0
margin_bottom = 5.0
rect_min_size = Vector2( 28, 0 )
bbcode_enabled = true
bbcode_text = "[color=#55c74446]0[color=#c74446]23/456"
meta_underlined = false
text = "023/456"
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="AP" type="HBoxContainer" parent="Main/Header/HeaderInfoMargin/VBoxContainer/HBoxContainer"]
margin_left = 38.0
margin_right = 72.0
margin_bottom = 5.0
custom_constants/separation = 1

[node name="APBar" type="TextureProgress" parent="Main/Header/HeaderInfoMargin/VBoxContainer/HBoxContainer/AP"]
margin_right = 5.0
margin_bottom = 5.0
max_value = 5.0
value = 2.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 3
tint_under = Color( 1, 1, 1, 0.333333 )

[node name="AP" type="RichTextLabel" parent="Main/Header/HeaderInfoMargin/VBoxContainer/HBoxContainer/AP"]
margin_left = 6.0
margin_right = 34.0
margin_bottom = 5.0
rect_min_size = Vector2( 28, 0 )
bbcode_enabled = true
bbcode_text = "[color=#55556a97]0[color=#556a97]15/100"
text = "015/100"
scroll_active = false

[node name="StatsPanel" type="PanelContainer" parent="Main"]
margin_top = 16.0
margin_right = 101.0
margin_bottom = 34.0

[node name="MarginContainer" type="MarginContainer" parent="Main/StatsPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 16.0

[node name="Stats" type="HBoxContainer" parent="Main/StatsPanel/MarginContainer"]
margin_right = 97.0
margin_bottom = 14.0
custom_constants/separation = 3

[node name="ParryInfo" parent="Main/StatsPanel/MarginContainer/Stats" instance=ExtResource( 5 )]
margin_right = 24.0
stat_label = "Parry"

[node name="EvasionInfo" parent="Main/StatsPanel/MarginContainer/Stats" instance=ExtResource( 5 )]
margin_left = 27.0
margin_right = 59.0
stat_icon = ExtResource( 6 )
stat_label = "Evasion"

[node name="ResistInfo" parent="Main/StatsPanel/MarginContainer/Stats" instance=ExtResource( 5 )]
margin_left = 62.0
margin_right = 90.0
stat_icon = ExtResource( 7 )
stat_label = "Resist"
